# bitwise

./: Cargo.toml  README.md
.cargo/: config.toml
src/arithmetic/: bits.rs  flags.rs
src/cpu/: cpuid.rs  instructions.rs  msr.rs
src/helpers/: bitmap.rs  cache.rs  gdt.rs  paging.rs
src/insertion_extraction/: dma.rs  mmio.rs  pio.rs
src/kernel_bitwise/: addr.rs  align.rs  bitwise.rs  endian.rs
