[package]
name    = "bitwise"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/kernel_bitwise/bitwise.rs"

[dependencies]
# none — core only

[profile.dev]
overflow-checks = true   # catch wrapping arithmetic bugs early

[profile.release]
overflow-checks = false  # release: wrapping is intentional in address arithmetic
opt-level       = 3
lto             = "thin"
