[package]
name    = "bitwise"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/kernel_bitwise/bitwise.rs"

[dependencies]
# none — pure logic, no hardware deps

# Test infrastructure for x86_64-unknown-none (QEMU tests).
# Not compiled when testing on the host (aarch64-apple-darwin).
[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
framework = { path = "../framework", features = ["panic_handler"] }
platform  = { path = "../platform" }