[package]
name    = "bitwise"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300

[lib]
path = "src/kernel_bitwise/bitwise.rs"
doctest = false

[dependencies]
# none — pure logic, no hardware deps

# Test infrastructure for x86_64-unknown-none (QEMU tests).
# Not compiled when testing on the host (aarch64-apple-darwin).
[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
framework  = { path = "../framework" }
platform   = { path = "../platform" }
bootloader = "0.9.0"